# legal_parsing

./: .gitignore  README.md  pyproject.toml  test.py  test_d.py  test_fz.py
log/: log.csv
src/parsing/: parsing_decisions.py  parsing_npa.py  test.py
